syntax = "proto3";

package serverStream;

service ServerStreamService {
  rpc testMethod (TestRequest) returns (stream TestReply) {}
}

message TestRequest {
  string reqMessage = 1;
}

message TestReply {
  string resMessage = 1;
}
